feat: Phase A  reorganize home, reusable footer, optimized navbar
Major UX improvements prioritizing content that attracts the most users:

Home page reorganization:
- Adoption + SOS Lost Dogs moved to top (highest emotional impact)
- Interactive Map elevated as core utility
- Leisure/routes section moved above businesses
- Technical/B2B content pushed to lower sections
- Inline footer replaced with reusable Footer component

New Footer component (src/components/Footer.tsx):
- 3-column link grid: Explore, Community, About
- Brand section with newsletter signup
- Bottom bar with legal, copyright, 'made with '
- Full i18n with useTranslations('footer')

Navbar optimization (src/components/Navbar.tsx):
- Reduced from 17 flat links to 4 primary + 3 dropdown groups
- Primary: Adopción, SOS Perdidos, Mapa, Rutas (highest traffic)
- Dropdowns: Services, Explore, Community
- Urgent links (adoption/SOS) highlighted in amber
- Mobile menu shows language selector + grouped sections
- Full i18n with useTranslations('nav')

i18n updates (all 8 languages):
- Expanded nav section: 25 keys (was 5)
- Expanded footer section: sections + links nested structure (was 9 flat keys)
- Languages: es, en, fr, eu, gl, ca, ast, zh

--- a/web/src/i18n/messages/ast.json
+++ b/web/src/i18n/messages/ast.json
@@ -5,11 +5,31 @@
         "loading": "Cargando..."
     },
     "nav": {
-        "home": "Entamu",
+        "home": "Aniciu",
+        "adoption": "Adopción",
+        "lost_dogs": "SOS Perdíos",
+        "map": "Mapa",
         "routes": "Rutes",
-        "accomodation": "Allugamientu",
+        "services": "Servicios",
+        "kennels": "Allugamientos",
+        "vets": "Veterinarios",
+        "hospitality": "Hostelería",
+        "explore": "Descubre",
+        "events": "Axenda",
+        "creators": "Creadores",
+        "cinema": "Cine",
+        "audio": "Audio",
+        "marketplace": "Tienda",
+        "blog": "Blog",
         "community": "Comunidá",
-        "store": "Tienda"
+        "forum": "Foru",
+        "danger_alerts": "Alertes",
+        "passport": "Pasaporte",
+        "enter": "Entrar",
+        "login": "Aniciar sesión",
+        "pro": "Soi Profesional",
+        "pro_mobile": "¿Yes profesional? Únete equí",
+        "more": "Más"
     },
     "hero": {
         "badge": "Mapa, planes y comunidá perruna",
@@ -90,13 +110,39 @@
         "newsletter_note": "Avisos reales, cero spam."
     },
     "footer": {
-        "map": "Mapa",
-        "layers": "Capes",
-        "interactive": "Interactivu",
-        "legal": "Llegal",
-        "business": "Negocios",
-        "support": "Apoyu",
-        "community": "Comunidá",
-        "copyright": "© 2026 Huellas del Norte."
+        "tagline": "Comunidá canina del norte",
+        "description": "Mapa, rutes, adopción y servicios pet friendly pal norte peninsular y l'Arcu Atlánticu.",
+        "newsletter_placeholder": "El to email pa novedaes",
+        "subscribe": "Únete",
+        "copyright": "© 2026 Huellas del Norte. Tolos drechos reservaos.",
+        "made_with": "Fecho con",
+        "in_north": "nel norte",
+        "sections": {
+            "explore": "Esplorar",
+            "community": "Comunidá",
+            "about": "Sobre nós"
+        },
+        "links": {
+            "routes": "Rutes pet friendly",
+            "adoption": "Adopción",
+            "kennels": "Allugamientos caninos",
+            "hospitality": "Hostelería pet friendly",
+            "vets": "Veterinarios",
+            "events": "Axenda y eventos",
+            "lost_dogs": "Perros perdíos",
+            "danger_alerts": "Alertes de peligru",
+            "forum": "Foru",
+            "blog": "Blog",
+            "creators": "Creadores",
+            "community_page": "Rede comunitaria",
+            "about_us": "Quién somos",
+            "how_it_works": "Cómo funciona",
+            "transparency": "Tresparencia",
+            "partners": "Collaboradores",
+            "accessibility": "Accesibilidá",
+            "contact": "Contactu",
+            "privacy": "Privacidá",
+            "terms": "Términos"
+        }
     }
 }
