feat: Phase B  branding, premium UI, and ServiceCard i18n
Completed Phase B of the master plan:

- Branding:
  - Updated web/public/brand/logo-trees.svg with a professional design (gradients, shadows, detailed trees).
  - Updated web/public/og-default.svg for better social sharing previews.

- Animations & UI:
  - Added micro-animations to web/src/app/globals.css (fade-in-up, float, shimmer, pulse-soft).
  - Created web/src/components/ScrollReveal.tsx component for scroll-based entrances.
  - Enhanced web/src/components/Hero.tsx with stats, animations, and responsive layout.

- Internationalization:
  - Refactored web/src/components/ServiceCard.tsx to be a Client Component and use useTranslations.
  - Added 'more_info' key to 'common' and 'stat_*' keys to 'hero' in all i18n/messages/*.json files.
  - Verified translations for es, en, fr, eu, gl, ca, ast, zh.

- Build verified: npx next build passed successfully.

--- a/web/src/i18n/messages/ca.json
+++ b/web/src/i18n/messages/ca.json
@@ -2,7 +2,8 @@
     "common": {
         "title": "Petjades del Nord - Comunitat Canina",
         "description": "La guia definitiva per gaudir del nord d'Espanya amb el teu gos.",
-        "loading": "Carregant..."
+        "loading": "Carregant...",
+        "more_info": "Més informació"
     },
     "nav": {
         "home": "Inici",
@@ -37,7 +38,10 @@
         "title2": "per viure amb el teu gos",
         "description": "Huellas del Norte reuneix serveis, negocis i lleure pet friendly en un sol lloc: des de veterinaris 24h fins a rutes amb aigua.",
         "cta_routes": "Explorar Rutes",
-        "cta_passport": "Passaport Digital"
+        "cta_passport": "Passaport Digital",
+        "stat_points": "Punts al mapa",
+        "stat_routes": "Rutes verificades",
+        "stat_adoptions": "Adopcions"
     },
     "home": {
         "highlights_badge": "El Que Trobaràs",
