--- a/web/src/i18n/messages/ast.json
+++ b/web/src/i18n/messages/ast.json
@@ -2,7 +2,8 @@
     "common": {
         "title": "Bicades del Norte - Comunidá Canina",
         "description": "La guía definitiva pa disfrutar del norte d'España col to perru.",
-        "loading": "Cargando..."
+        "loading": "Cargando...",
+        "more_info": "Más información"
     },
     "nav": {
         "home": "Aniciu",
@@ -37,7 +38,10 @@
         "title2": "pa vivir col to perru",
         "description": "Huellas del Norte axunta servicios, negocios y ocio pet friendly nun solu llugar: dende veterinarios 24h hasta rutes con agua.",
         "cta_routes": "Esplorar Rutes",
-        "cta_passport": "Pasaporte Dixital"
+        "cta_passport": "Pasaporte Dixital",
+        "stat_points": "Puntos nel mapa",
+        "stat_routes": "Rutes verificaes",
+        "stat_adoptions": "Adopciones"
     },
     "home": {
         "highlights_badge": "Lo Que Vas Atopar",
